flex를 이용한 navigation 메뉴

--- a/skeleton.html
+++ b/skeleton.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
+        <header class="header clearfix">
             <h1 class="logo">
                 <a href="#">
                 <img src="./images/webcafe-logo.png" alt="웹 카페 로고">
